Issue #150: Upgraded to require Java 7 and Java 8 for building and testing. Issue #151: Upgraded project dependencies and refactored use of EasyMock to support latest release.